[package]
name = "ethereum-lido"
version = "0.1.0"
edition = "2021"

[lib]
name = "ethereum_lido"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.95"
hex = "0.4.3"
itertools = "0.10.5"
num-bigint = "0.4.6"
prost = "0.11"
substreams = "0.5.22"
substreams-ethereum = "0.9.9"
tycho-substreams = "0.6.0"


[build-dependencies]
anyhow = "1"
substreams-ethereum = "0.9.9"
