[package]
name = "ethereum-uniswap-v3-logs-only"
version = "0.1.2"
edition = "2021"

[lib]
name = "ethereum_uniswap_v3_logs_only"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.75"
ethabi = "18.0.0"
hex = "0.4.3"
itertools = "0.13.0"
num-bigint = "0.4.4"
prost = "0.11"
substreams = "0.5.22"
substreams-ethereum = "0.9.9"
substreams-helper = { path = "../crates/substreams-helper" }
tycho-substreams = { path = "../crates/tycho-substreams" }
uniswap-v3-core = { path = "../../crates/uniswap-v3" }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1.0.75"
substreams-ethereum = "0.9.9"
